--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1.0.0</version>
     <name>Feishu Bitable Spring Boot Starter</name>
     <description>Spring Boot starter for Feishu Bitable (DuoWeiTable) APIs.</description>
-    <url>https://github.com/your-org/fs-dw-table-springboot-starter</url>
+    <url>https://github.com/bendangmi/fs-dw-table-springboot-starter</url>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -23,17 +23,16 @@
     </licenses>
     <developers>
         <developer>
-            <id>your-id</id>
-            <name>Your Name</name>
-            <email>you@example.com</email>
-            <url>https://github.com/your-org</url>
+            <id>bendangmi</id>
+            <name>bendangmi</name>
+            <url>https://github.com/bendangmi</url>
         </developer>
     </developers>
     <scm>
-        <connection>scm:git:https://github.com/your-org/fs-dw-table-springboot-starter.git</connection>
-        <developerConnection>scm:git:https://github.com/your-org/fs-dw-table-springboot-starter.git</developerConnection>
+        <connection>scm:git:https://github.com/bendangmi/fs-dw-table-springboot-starter.git</connection>
+        <developerConnection>scm:git:https://github.com/bendangmi/fs-dw-table-springboot-starter.git</developerConnection>
         <tag>HEAD</tag>
-        <url>https://github.com/your-org/fs-dw-table-springboot-starter</url>
+        <url>https://github.com/bendangmi/fs-dw-table-springboot-starter</url>
     </scm>
     <properties>
         <java.version>17</java.version>
